--- a/term-resume/src/main/resources/templates/QnA/QnAregister.html
+++ b/term-resume/src/main/resources/templates/QnA/QnAregister.html
@@ -13,10 +13,10 @@
 					<div class="panel-heading"><h1>QnA Register Page</h1></div>
 					<div class="panel-body">
 				
-						<form th:action="@{Qregister}" method="post">
+						<form th:action="@{QnAregister}" method="post">
 				
 							<div class="form-group">
-								<label>Question</label> <input class="form-control" name="Question"
+								<label>Question</label> <input class="form-control" name="question"
 									th:value="${Q.question}" />
 								<p class="help-block">Question text here.</p>
 							</div>
